TCC RN & Module

--- a/Content/DM Glossary.htm
+++ b/Content/DM Glossary.htm
@@ -18,7 +18,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1"> Allocations</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                    The Allocations solution contains a clear work flow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
+                    The Allocations module contains a clear work flow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -28,7 +28,7 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Adaptive Allocations</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">An extension of the Allocation solution that automates the creation and allocation of localized assortments. 
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">An extension of the Allocation module that automates the creation and allocation of localized assortments. 
                         <p>Adaptive Allocations determines an optimal configuration of products and uses a draft engine and data analytics for locations and products to fulfill a need that can be set through financial planning, location planning, and other cover methods.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -45,7 +45,7 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Allocations Rollup</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">A view in the Allocations solution with a pivot grid to customize allocations data and generate reports.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">A view in the Allocations module with a pivot grid to customize allocations data and generate reports.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Allow Reservations</td>
@@ -608,7 +608,7 @@ Last Week Sales Revenue allows allocators and demand planners to review sales pe
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Rate of Sale Calculator</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The Rate of Sale Calculator solution models scenarios to help determine how much, in units or revenue, a particular placeholder or collection might sell per site in a given week.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The Rate of Sale Calculator module models scenarios to help determine how much, in units or revenue, a particular placeholder or collection might sell per site in a given week.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Rate of Sales (ROS)</td>
