--- a/Content/Topics/Administrator Panel/Filters and Hierarchies.htm
+++ b/Content/Topics/Administrator Panel/Filters and Hierarchies.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Filters and hierarchies</h1>
-        <p>The <span class="Emphasis">Hierarchy Filtering</span> view is  accessible from the <span class="Emphasis">Views</span> solution on the <span class="Emphasis">System Utilities</span> tab and is used in the configuration process during an implementation. </p>
+        <p>The <span class="Emphasis">Hierarchy Filtering</span> view is  accessible from the <span class="Emphasis">Views</span> module on the <span class="Emphasis">System Utilities</span> tab and is used in the configuration process during an implementation. </p>
         <p>
             <img src="../../Resources/Images/Administrator Panel/Hierarchy_Filtering_view.png" class="LargeImages" />
         </p>
