--- a/Content/Topics/Allocations/Allocation Overview.htm
+++ b/Content/Topics/Allocations/Allocation Overview.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Allocations Overview</h1>
-        <p>The Allocations solution contains a workflow to execute orders for the transfer of merchandise throughout the supply chain at a level above item master (defined as variant).</p>
+        <p>The Allocations module contains a workflow to execute orders for the transfer of merchandise throughout the supply chain at a level above item master (defined as variant).</p>
         <h2>Components of an allocation</h2>
         <p>There are a few building blocks for Allocations to determine the demand or need of a store. The main components to help calculate the demand for a store are product model, size model, location strategy, and sales curve. </p>
         <h3>Product model</h3>
