--- a/Content/Topics/Allocations/Monte Carlo Re Trend Overview.htm
+++ b/Content/Topics/Allocations/Monte Carlo Re Trend Overview.htm
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>Monte Carlo Re-Trend Overview</h1>
         <p>The re-trending of forecasts is an important step to correctly manage the continued allocation of products as they transition from a pre-season plan to in-season. As products begin to sell, their sales patterns inevitably trend away from the initial plan (sometimes in the positive, sometimes in the negative). The included re-trend mechanisms in ToolsGroup JustEnough account for the trends in sales and form an amended go-forward sales plan against which continued allocations may be structured. </p>
-        <p>With the initial launch of the Allocations solution, a PID mechanism was included to provide a reactive result set based on potentially limited data. With the introduction of the Monte Carlo simulation re-trend mechanism, organizations now have additional tools at their disposal to provide flexibility when dealing with irregular sales patterns. </p>
+        <p>With the initial launch of the Allocations module, a PID mechanism was included to provide a reactive result set based on potentially limited data. With the introduction of the Monte Carlo simulation re-trend mechanism, organizations now have additional tools at their disposal to provide flexibility when dealing with irregular sales patterns. </p>
         <p>Using historical demand for an item, a distribution for the observed demand values can be calculated  using Monte Carlo simulation.&#160; Then a dynamic confidence level is calculated based on the variability of the item’s demand and the number of observations available. </p>
         <p>Using the confidence level and the demand distribution, a total demand value is calculated and compared to the total forecast over the same time frame.</p>
         <p>A re-trend factor is then calculated based on a desired demand satisfaction percentage.</p>
