--- a/Content/Topics/Assortment Planning/Manipulating placeholders and collections.htm
+++ b/Content/Topics/Assortment Planning/Manipulating placeholders and collections.htm
@@ -526,7 +526,7 @@
 			</p>
             </li>
             <li>
-                <p><span class="Emphasis">Seasonality Curve Factor</span>: When an Item has both a Seasonality Curve and a Lifecycle Curve, the Seasonality Curve Factor determines how the two curves influence the Sales Plan. A value of .5 means that the two curves each influence the Sales Plan 50% each. A value of .7 would mean that the Seasonality Curve is weighted at 70% and the Lifecycle Curve at 30%. The values for the two curves always add up to 100%. The Seasonality Curve Factor is only relevant if there is both a Seasonality Curve and a Lifecycle Curve. If only one curve is set, then any value in the Seasonality Curve Factor field does nothing.</p>
+                <p><span class="Emphasis">Seasonality Curve Weight Factor</span>: When an Item has both a Seasonality Curve and a Lifecycle Curve, the Seasonality Curve Factor determines how the two curves influence the Sales Plan. A value of .5 means that the two curves each influence the Sales Plan 50% each. A value of .7 would mean that the Seasonality Curve is weighted at 70% and the Lifecycle Curve at 30%. The values for the two curves always add up to 100%. The Seasonality Curve Factor is only relevant if there is both a Seasonality Curve and a Lifecycle Curve. If only one curve is set, then any value in the Seasonality Curve Factor field does nothing.</p>
             </li>
             <li>
                 <p><span class="Emphasis">Site Count (Active)</span>: The average total site count and the average active site count (in parenthesis) of all clusters a placeholder/collection is assorted to between Phase In and Phase Out.</p>
