--- a/Content/Topics/Attribute Management/Attribute Management Overview.htm
+++ b/Content/Topics/Attribute Management/Attribute Management Overview.htm
@@ -4,11 +4,11 @@
     </head>
     <body>
         <h1>Attribute Management Overview</h1>
-        <p>Attribute management has traditionally been restricted to defining core attributes in host systems and pushing these to the planning solution for use in reporting and other grouping functions. </p>
+        <p>Attribute management has traditionally been restricted to defining core attributes in host systems and pushing these to the Planning module for use in reporting and other grouping functions. </p>
         <p>
             <img src="../../Resources/Images/Attribute Management/Attribute Management Module.png" class="LargeImages" />
         </p>
-        <p>The <span class="Emphasis">Attribute Management</span> solution can be used to </p>
+        <p>The <span class="Emphasis">Attribute Management</span> module can be used to </p>
         <ul>
             <li>
                 <p>define attributes throughout the system all the way down to a product/location level.</p>
