--- a/Content/Topics/Campaigns and Events/Configuring slot sets.htm
+++ b/Content/Topics/Campaigns and Events/Configuring slot sets.htm
@@ -219,7 +219,7 @@
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
                         View
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Opens the selected Promotion in the Promotions solution.
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Opens the selected Promotion in the Promotions module.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
