--- a/Content/Topics/Campaigns and Events/Create a new Promotion.htm
+++ b/Content/Topics/Campaigns and Events/Create a new Promotion.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Create a new promotion</h1>
@@ -12,8 +10,8 @@
             <img src="../../Resources/Images/Events/Create a new Promotion.png" class="LargeImages" />
         </p>
         <p>Click <span class="Emphasis">Save and Close</span> once all of the required information has been entered.</p>
-        <p class="BasicNote">After the Wizard closes, users either return to the Event Slot Set or are directed to the Promotions solution Promotion Detail screen depending on the Global Policy <span class="Emphasis">Go to Promotion Module after Promotion creation</span>. </p>
-        <p>If the Promotion Detail screen displays, further modifications to the Promotion can be made. If the Events solution displays, navigate to the Promotion in the Event and click on <span class="Emphasis">View</span> to make changes. Content can be entered specifically for the Event by clicking on <span class="Emphasis">Content</span>. For more information, See <a href="Content Editor.htm">Content Editor</a>.</p>
+        <p class="BasicNote">After the Wizard closes, users either return to the Event Slot Set or are directed to the Promotions module Promotion Detail screen depending on the Global Policy <span class="Emphasis">Go to Promotion Module after Promotion creation</span>. </p>
+        <p>If the Promotion Detail screen displays, further modifications to the Promotion can be made. If the Events module displays, navigate to the Promotion in the Event and click on <span class="Emphasis">View</span> to make changes. Content can be entered specifically for the Event by clicking on <span class="Emphasis">Content</span>. For more information, See <a href="Content Editor.htm">Content Editor</a>.</p>
         <table style="margin-left: auto;margin-right: auto;mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
             <col class="TableStyle-standard-Column-Column1" />
             <col class="TableStyle-standard-Column-Column2" />
