--- a/Content/Topics/Campaigns and Events/Event Manager Global Policies.htm
+++ b/Content/Topics/Campaigns and Events/Event Manager Global Policies.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Event manager system policies</h1>
@@ -120,7 +118,7 @@
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                        Provides the ability to set what action occurs when the user double clicks on a Promotion in an Event: 
-                        <ul><li>Go to Promotion module – Open the Promotion Detail tab in the Promotions solution.</li><li>Open Promotion window – Open the Promotion in a window while remaining in the Events solution.</li><li>None – Do nothing when the user double clicks on a Promotion. </li></ul><p class="BasicNote">This setting will limit the user to only modifying or viewing the details of a Promotion from the Promotions solution.</p></td>
+                        <ul><li>Go to Promotion module – Open the Promotion Detail tab in the Promotions module.</li><li>Open Promotion window – Open the Promotion in a window while remaining in the Events module.</li><li>None – Do nothing when the user double clicks on a Promotion. </li></ul><p class="BasicNote">This setting will limit the user to only modifying or viewing the details of a Promotion from the Promotions module.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
