--- a/Content/Topics/Cluster Site Manager/Cluster Site Manager Overview.htm
+++ b/Content/Topics/Cluster Site Manager/Cluster Site Manager Overview.htm
@@ -19,7 +19,7 @@
             <li>At what level of the product hierarchy will clusters be different? Should there be homogenous clusters that are used across multiple product areas or clusters that are specific to certain areas? In those areas, are there product attributes to consider to further specialize clusters?</li>
             <li>What metrics should be used when clustering stores? Typically, this involves some type of historical or forecasted sales component, but should the business use sales revenue, units, cost, margin, margin %, GMROII, some combination of multiple?</li>
         </ul>
-        <p>To use product and site attributes for the creation of site clusters, attribute sets, families, and values must be defined. At a minimum, at least one set must be assigned to the topmost level of both the product and site hierarchy on the Attribute Management solution on the Maintenance tab.</p>
+        <p>To use product and site attributes for the creation of site clusters, attribute sets, families, and values must be defined. At a minimum, at least one set must be assigned to the topmost level of both the product and site hierarchy on the Attribute Management module on the Maintenance tab.</p>
         <p>Site and product attribute associations can be set through configured data import processes, but they can also be managed manually in the following places:</p>
         <ul>
             <li><span class="Emphasis">Site Attributes:</span> Management &gt; Site Manager &gt; Site Attribute Management</li>
