--- a/Content/Topics/Cluster Site Manager/Clustering Algorithms.htm
+++ b/Content/Topics/Cluster Site Manager/Clustering Algorithms.htm
@@ -14,7 +14,7 @@
         <p>* The illustration was prepared with the Java applet, E.M. Mirkes,&#160;<a href="http://www.math.le.ac.uk/people/ag153/homepage/KmeansKmedoids/Kmeans_Kmedoids.html">K-means and K-medoids: applet</a>. University of Leicester, 2011.</p>
         <p>Figures 1a) to 1f) display the iterations of the K-Means algorithm on a particular data set, where figures 2a) to 2h) display the iterations of the K-Medoids algorithm on the same set. In this case, K-Means  ignores the clear differentiation of the two groups in the lower half of the grid, whereas K-Medoids provides the more accurate solution. This difference occurs because K-Means estimates the ideal positioning of arbitrary centroids to define clusters, whereas K-Medoids uses actual data points in the set as medoids to define its clusters. Not every data set has such a clear-cut differentiation of groups. In some cases, the accuracy of one method over the other can be subjective.</p>
         <div class="Note_BasicNote">
-            <p>The correct structuring of cluster sets is essential to getting the most out of the Assortment Planning solution. Before creating cluster sets for use with Assortment Planning, review the following:</p>
+            <p>The correct structuring of cluster sets is essential to getting the most out of the Assortment Planning module. Before creating cluster sets for use with Assortment Planning, review the following:</p>
             <ul>
                 <li>
                     <MadCap:xref href="Cluster Site Manager Overview.htm">Site clustering overview</MadCap:xref>
