--- a/Content/Topics/Cluster Site Manager/Viewing Cluster Set Snapshots or Templates.htm
+++ b/Content/Topics/Cluster Site Manager/Viewing Cluster Set Snapshots or Templates.htm
@@ -129,7 +129,7 @@
                         <p>Allocation</p>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Whether the cluster set is configured for use with the Allocation solution and allocation scenarios in the Rate of Sale solution. 
+                        Whether the cluster set is configured for use with the Allocation module and allocation scenarios in the Rate of Sale module. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -137,7 +137,7 @@
                         <p>Assortment</p>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Whether the cluster set is configured for use with the Assortment Planning solution and assortment planning scenarios in the Rate of Sale module. 
+                        Whether the cluster set is configured for use with the Assortment Planning module and assortment planning scenarios in the Rate of Sale module. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -145,7 +145,7 @@
                         <p>Events</p>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Whether the cluster set is configured for use with the Events solution.  
+                        Whether the cluster set is configured for use with the Events module.  
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -153,7 +153,7 @@
                         <p>Promotions</p>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Whether the cluster set is configured for use with the Promotions solution. 
+                        Whether the cluster set is configured for use with the Promotions module. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -161,7 +161,7 @@
                         <p>Price</p>
                     </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                         If the cluster set is configured for use with the Price Manager solution. 
+                         If the cluster set is configured for use with the Price Manager module. 
                     </td>
                 </tr>
             </tbody>
