--- a/Content/Topics/Cluster Site Manager/Viewing Cluster Sets.htm
+++ b/Content/Topics/Cluster Site Manager/Viewing Cluster Sets.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Viewing cluster sets </h1>
-        <p style="font-size: 12pt;">From the <span class="Emphasis">Cluster Set</span> screen in the <span class="Emphasis">Site Clustering</span> solution, users can calculate and view specific cluster sets in both detail and chart modes, make manual modifications to site cluster assignments, and arrange multiple cluster sets in the view for easy comparison.</p>
+        <p style="font-size: 12pt;">From the <span class="Emphasis">Cluster Set</span> screen in the <span class="Emphasis">Site Clustering</span> module, users can calculate and view specific cluster sets in both detail and chart modes, make manual modifications to site cluster assignments, and arrange multiple cluster sets in the view for easy comparison.</p>
         <p>Cluster sets selected to display appear as tabs with the cluster set name just below the toolbar.</p>
         <h2>To view a cluster set</h2>
         <ol>
