--- a/Content/Topics/Content Manager/Content Manager Overview.htm
+++ b/Content/Topics/Content Manager/Content Manager Overview.htm
@@ -5,7 +5,7 @@
     <body>
         <h1>Content Manager Overview</h1>
         <p>Content Manager supports the management of product promotional content (copy text and images) for the marketing and advertising teams. All default advertising copy, disclaimers and special call-outs can be managed within a centralized content repository which can then be customized at the Promotion and Event levels. The repository stores all content needed across all market channels, and depending on format, utilizes the appropriate fields for each advertising vehicle and channel. The fields are customizable for added flexibility. </p>
-        <p>To access the Content Management solution, click <span class="Emphasis">Content</span> on the <span class="Emphasis">Management</span> tab.</p>
+        <p>To access the Content Management module, click <span class="Emphasis">Content</span> on the <span class="Emphasis">Management</span> tab.</p>
         <p>
             <img src="../../Resources/Images/Content Manager/Content Manager Overview.png" class="LargeImages" />
         </p>
