--- a/Content/Topics/Filters/Creating a New Filter.htm
+++ b/Content/Topics/Filters/Creating a New Filter.htm
@@ -76,7 +76,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Promotion </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                      Promotions as created and maintained in the Promotions solution.
+                      Promotions as created and maintained in the Promotions module.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1" MadCap:conditions="">
@@ -86,7 +86,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Event </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                       Events as created and maintained in the Events solution.
+                       Events as created and maintained in the Events module.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1" MadCap:conditions="">
