--- a/Content/Topics/GVCSM/Generic View Collection Set Manager.htm
+++ b/Content/Topics/GVCSM/Generic View Collection Set Manager.htm
@@ -10,8 +10,7 @@
         <p>The access right <span class="Emphasis">Access To Generic View Collection Set Configuration</span> is required.</p>
         <h2>Case sensitivity</h2>
         <p>If users wish to add a new View to an existing page or group, they must ensure that they enter the existing plugin, page, or group name exactly as is. Entering a plugin, page, or group name that does not exactly match case results in a new plugin, page, or group being created. </p>
-        <p class="Example">
-            <span class="Emphasis">Influence</span> and <span class="Emphasis">influence</span> would be two different tabs on the ribbon.</p>
+        <p class="Example"><span class="Emphasis">Influence</span> and <span class="Emphasis">influence</span> would be two different tabs on the ribbon.</p>
         <h2>Example</h2>
         <p>The following shows the creation of a new plugin in the <span class="Emphasis">Generic View Collection Set Module</span>.</p>
         <p>
@@ -58,98 +57,83 @@
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Name</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Name</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The plugin name as it displays in the Plugin Group in the ribbon.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Description</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Description</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The description that displays when a user hovers the mouse over the icon.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Display Order</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Display Order</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The position in which the plugin displays. The left most position is <span class="Emphasis">Plugin Display Order</span> 0 (zero).</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Group Name</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Group Name</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         The name of the group as it will appear when the module is selected. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Group Description</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Group Description</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The plugin group description.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Group Display Order</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Group Display Order</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The position on the ribbon where the new plugin group will appear.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Page Name</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Page Name</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The name of the module as it will appear in the ribbon.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Page Description</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Page Description</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The plugin page description.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Page Display Order</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Page Display Order</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The position on the ribbon where the new plugin page will appear.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Author</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Author</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The user who created the plugin.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Image</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Image</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">An image selected by the user.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">View Collection Set</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">View Collection Set</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The collection set to display.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Enabled</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Enabled</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         Default is unchecked. If checked, then the new plugin displays when <span class="Emphasis">Save</span> is clicked.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Plugin Access Level</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Plugin Access Level</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">Whether the plugin is private to the user who created it or shared with other users.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyB-Column1-Body1">
-                        <span class="Emphasis">Plugin Users</span>
+                    <td class="TableStyle-standard-BodyB-Column1-Body1"><span class="Emphasis">Plugin Users</span>
                     </td>
-                    <td class="TableStyle-standard-BodyA-Column2-Body1">The Roles and Users with access to the plugin. The Change button is enabled when <span class="Emphasis">Plugin Access Level</span> is set to <span class="Emphasis">Shared</span>.</td>
+                    <td class="TableStyle-standard-BodyA-Column2-Body1">The Roles and Users with access to the plugin. The <span class="Emphasis">Change</span> button is enabled when <span class="Emphasis">Plugin Access Level</span> is set to <span class="Emphasis">Shared</span>.</td>
                 </tr>
             </tbody>
         </table>
