--- a/Content/Topics/Group Forecasts/Slice Forecast.htm
+++ b/Content/Topics/Group Forecasts/Slice Forecast.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Forecasting selected slices of models</h1>
-        <p>In the Group Forecasting solution, a selected slice of the model can be forecast. Slices are a vertical hierarchy built as a part of the model and are anchored around each item at the top of a static hierarchy. Slices can be forecasted individually to improve the overall performance of the Group Forecasting solution.</p>
+        <p>In the Group Forecasting module, a selected slice of the model can be forecast. Slices are a vertical hierarchy built as a part of the model and are anchored around each item at the top of a static hierarchy. Slices can be forecasted individually to improve the overall performance of the Group Forecasting module.</p>
         <p>The Forecast button, under Hierarchy Navigation on the Group Forecast screen, forecasts the entire slice associated with the highlighted node.</p>
         <p>The <span class="Emphasis">Lock</span> button locks only the highlighted node.</p>
         <p>
