--- a/Content/Topics/Media Manager/Adding media.htm
+++ b/Content/Topics/Media Manager/Adding media.htm
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Adding media</h1>
-        <p>Media from a local or network source can be added to the Media Manager repository. New media displays in the Repository grid and is available for users across the ToolsGroup JustEnough solution suite.</p>
+        <p>Media from a local or network source can be added to the Media Manager repository. New media displays in the Repository grid and is available for users across the ToolsGroup JustEnough suite.</p>
         <ol>
             <li>
                 <p>Click on <span class="Emphasis">Add</span> to load the Explorer or Finder window.</p>
