--- a/Content/Topics/Media Manager/Media Manager Overview.htm
+++ b/Content/Topics/Media Manager/Media Manager Overview.htm
@@ -8,7 +8,7 @@
         <p>
             <img src="../../Resources/Images/Media Manager/Media Manager Overview.png" class="LargeImages" />
         </p>
-        <p>To access this solution, click <span class="Emphasis">Media</span> on the <span class="Emphasis">Management</span> tab.</p>
+        <p>To access this module, click <span class="Emphasis">Media</span> on the <span class="Emphasis">Management</span> tab.</p>
         <h2>File Storage API</h2>
         <p>The File Storage API can handle Uniform Resource Identifiers (URI) allowing for the import and usage within ToolsGroup JustEnough of a user's images. Users need to supply the image name, image file extension type, and the image's URL. </p>
         <p>Additionally, Repository Manager can accept URIs and pass the images to File Store API for storage and usage. For Repository Manager, users need to provide the name of the file the image should be stored in. </p>
