--- a/Content/Topics/Media Manager/Media Manager.htm
+++ b/Content/Topics/Media Manager/Media Manager.htm
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <title></title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Media Manager user rights</h1>
@@ -20,7 +20,7 @@
                          Access To Media Manager 
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                         Provides access to the Media Manager solution. 
+                         Provides access to the Media Manager module. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
