--- a/Content/Topics/Merchandise Financial Planning/Financial Planning Configuration.htm
+++ b/Content/Topics/Merchandise Financial Planning/Financial Planning Configuration.htm
@@ -4,7 +4,7 @@
     <body>
         <h1>MFP setup and configuration</h1>
         <p>The Merchandise Financial Planning module is designed with the end user in mind - combining essential planning functionalities, such as Cost and Retail methods of accounting, calendar and period level configurability, and plan approval workflow with an innovative approach to data management and user interaction.</p>
-        <p>During functional solution design, many important decisions will be made that will need to be well-defined prior to calculating the first plan. Even then, subsequent decisions will require changes to the configuration. The following is a road map to fine-tuning the client’s experience.  It is important to understand a few parts of the functional design before initializing the first plan.</p>
+        <p>During functional design, many important decisions will be made that will need to be well-defined prior to calculating the first plan. Even then, subsequent decisions will require changes to the configuration. The following is a road map to fine-tuning the client’s experience.  It is important to understand a few parts of the functional design before initializing the first plan.</p>
         <p>Initial Considerations:</p>
         <ul>
             <li>
