--- a/Content/Topics/Notifications/About Custom Notifications.htm
+++ b/Content/Topics/Notifications/About Custom Notifications.htm
@@ -17,7 +17,7 @@
                 <p>The <span class="Emphasis">Notification Maintenance</span> screen displays.</p>
             </li>
             <li>
-                <p>Under the respective solution, click the<span class="Emphasis"> [+ Add Custom Notification]</span> row. </p>
+                <p>Under the respective module, click the<span class="Emphasis"> [+ Add Custom Notification]</span> row. </p>
                 <p>A new row displays.</p>
             </li>
             <li>In the Notification Properties panel:<ol style="list-style-type: lower-alpha;"><li>enter a notification title.</li><li>select the notification type.</li><li>enter the notification message.</li></ol></li>
