--- a/Content/Topics/Notifications/Managing Custom Notifications.htm
+++ b/Content/Topics/Notifications/Managing Custom Notifications.htm
@@ -8,7 +8,7 @@
         <h2>To update a custom notification</h2>
         <ol>
             <li>
-                <p>From the Maintenance solution, click <span class="Emphasis">Notification Maintenance</span>. </p>
+                <p>From the Maintenance module, click <span class="Emphasis">Notification Maintenance</span>. </p>
                 <p>The Notification Maintenance screen displays.</p>
             </li>
             <li>
