--- a/Content/Topics/Notifications/Managing Notifications.htm
+++ b/Content/Topics/Notifications/Managing Notifications.htm
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Managing notifications using the Notification Inbox</h1>
         <p>Notifications are viewed, sorted, and dismissed using the <span class="Emphasis">Notification Inbox</span>. Notifications that are no longer relevant can be dismissed to remove them from immediate view. The dismissed notifications are stored under <span class="Emphasis">History</span> on the <span class="Emphasis">Notification Inbox</span> screen.</p>
-        <p>The <span class="Emphasis">Notification Inbox</span> can be moved to another screen notifications sorted by time, solution, and type.</p>
+        <p>The <span class="Emphasis">Notification Inbox</span> can be moved to another screen notifications sorted by time, module, and type.</p>
         <h2>To sort notifications</h2>
         <ol>
             <li>
