--- a/Content/Topics/Notifications/Notifications Overview.htm
+++ b/Content/Topics/Notifications/Notifications Overview.htm
@@ -8,7 +8,7 @@
         <p>Notification delivery settings are system configured. However, these settings can be changed on the <span class="Emphasis">Notification Preferences</span> screen.</p>
         <p>There are three Notification views:</p>
         <ul>
-            <li><span class="Emphasis">Notification Maintenance</span>: Used by system administrators to subscribe to system generated notifications, by module, and configure the default delivery method for each subscription. Additionally, administrators can create custom notifications, by module, which can be scheduled and sent by Job Manager or through customized stored procedures (CUSP hooks) in the respective solution.</li>
+            <li><span class="Emphasis">Notification Maintenance</span>: Used by system administrators to subscribe to system generated notifications, by module, and configure the default delivery method for each subscription. Additionally, administrators can create custom notifications, by module, which can be scheduled and sent by Job Manager or through customized stored procedures (CUSP hooks) in the respective module.</li>
             <li><span class="Emphasis">Notification Preferences</span>: Located under the User Settings tab, allows users to override system configured delivery methods. </li>
             <li><span class="Emphasis">Notification Inbox</span>: Displays the notifications as they were configured. The Notification icon on the right side at the top of the screen indicates the number of unread notifications. Click the Notification icon to display the <span class="Emphasis">Notification Inbox</span>.</li>
         </ul>
