--- a/Content/Topics/Policy/Policy Overview.htm
+++ b/Content/Topics/Policy/Policy Overview.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Policy Overview</h1>
@@ -12,7 +10,7 @@
         <p>Inventory policies are created, maintained, and deleted within the <span class="Emphasis">Policy Task</span> screen. This screen displays the current policy tasks and their respective details. </p>
         <h2>Policy tasks</h2>
         <p>Policy tasks are individual tasks that can be assigned both start and end dates, if required. Policy tasks are sorted by their respective execution orders in the Policy Task grid. The details of each task display below the Policy Task grid.</p>
-        <p>It is important to select the correct filters when building new policies to determine the application of the task to the intended items. New filters can be created through the Filters solution if appropriate filters do not exist. </p>
+        <p>It is important to select the correct filters when building new policies to determine the application of the task to the intended items. New filters can be created through the Filters module if appropriate filters do not exist. </p>
         <p>
             <img src="../../Resources/Images/Policy/Policy Module View.png" class="LargeImages" />
         </p>
@@ -57,80 +55,69 @@
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Name</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Name</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                          The name given to the task. Cloned tasks are prefixed with <span class="Emphasis">Cloned From</span> before they are changed. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Description</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Description</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">A basic description of the task.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Default Task</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Default Task</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                    The default task is the fallback inventory policy for any inventories not covered by other tasks. There can be only one default task. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Enabled</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Enabled</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">If the task is currently active.  
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Execution Order</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Execution Order</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                          The order in which the task rules are applied. This is important because some task rules may supersede others, depending on their order.  
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Start Date Defined</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Start Date Defined</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">This checkbox must be selected if a task is intended to begin  on a certain date with the start date specified in the next column.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Start Date</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Start Date</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                          If a task is intended to begin  on a certain date, the start date must be specified and the checkbox must be selected in the preceding column. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task End Date Defined</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task End Date Defined</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">This checkbox must be selected if a task is intended to end on a certain date with the end date specified in the next column.  
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task End Date</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task End Date</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                          If the task is intended to end  on a certain date, the end date must be specified and the checkbox must be selected in the preceding column. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <span class="Emphasis">Task Allowed To Execute</span>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Task Allowed To Execute</span>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">An informational checkbox that displays the effective status of the task. If the task is enabled and falls within the specified date range, the <span class="Emphasis">Task Allowed to Execute</span> checkbox must be selected. </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyB-Column1-Body1">
-                        <span class="Emphasis">Filter</span>
+                    <td class="TableStyle-standard-BodyB-Column1-Body1"><span class="Emphasis">Filter</span>
                     </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">The filter used to determine which inventory the policy is applied to.</td>
                 </tr>
