--- a/Content/Topics/Promotion Management/Promotion Manager User Rights.htm
+++ b/Content/Topics/Promotion Management/Promotion Manager User Rights.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Promotion manager user rights</h1>
@@ -58,7 +56,7 @@
                         Allow Access to Promotion
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Provides access to the <span class="Emphasis">Promotion</span> solution. 
+                        Provides access to the <span class="Emphasis">Promotion</span> module. 
                         <p class="BasicNote">It is not recommended that this permission be incorporated with Promotion Workflow Statuses</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
