--- a/Content/Topics/Release Notes/Size Model.htm
+++ b/Content/Topics/Release Notes/Size Model.htm
@@ -6,7 +6,7 @@
     <body>
         <h1>Size Model</h1>
         <h2>Reviewing size model exceptions</h2>
-        <p>Typically, a ToolsGroup JustEnough solution generates and regenerates size models regularly with the given parameters. Sometimes, the list of inventory provided to generate size models has no sales history or the filter becomes empty due to the passage of time. When this happens, very poor size models are generated due to the provided bad data. An enhancement has been made to add three new Exception messages to the Size Models view and one new Exception message to the Allocation Strategy view.</p>
+        <p>Typically, a ToolsGroup JustEnough module generates and regenerates size models regularly with the given parameters. Sometimes, the list of inventory provided to generate size models has no sales history or the filter becomes empty due to the passage of time. When this happens, very poor size models are generated due to the provided bad data. An enhancement has been made to add three new Exception messages to the Size Models view and one new Exception message to the Allocation Strategy view.</p>
         <h3>Size Model view</h3>
         <p>If a size curve’s item master filter is empty, the items in the filter have no history during recalculation, or all history has been filtered out due to sales model criteria, users are notified via a new column  labeled <span class="Emphasis">Exception Status</span>. If an Exception is present, the field is formatted red. Within the field, users click <span class="Emphasis">View</span> to see the details of the issue.</p>
         <p>
