--- a/Content/Topics/Release Notes/Target Choice Count.htm
+++ b/Content/Topics/Release Notes/Target Choice Count.htm
@@ -4,5 +4,63 @@
     </head>
     <body>
         <h1>Target Choice Count</h1>
+        <p>&#160;</p>
+        <p>&#160;</p>
+        <p>The following existing metrics were added to the <span class="Emphasis">Segment Definitions</span> section: <span class="Emphasis">Seasonality Curve</span>, <span class="Emphasis">Lifecycle Curve</span>, <span class="Emphasis">Markdown Curve</span>, and <span class="Emphasis">Seasonality Curve Weight Factor</span>.</p>
+        <p>&#160;</p>
+        <p>The following fields were added to the existing <span class="Emphasis">Segment Floor Set Updates</span> section on the <span class="Emphasis">Edit Target Scenario</span> view:</p>
+        <table style="width: 100%;">
+            <col style="width: 499px;" />
+            <col />
+            <tbody>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>
+                                <p>Default End Period </p>
+                            </li>
+                            <li>
+                                <p>Default Markdown Period </p>
+                            </li>
+                            <li>
+                                <p>Recommended New Choices </p>
+                            </li>
+                            <li>
+                                <p>Active New Choices </p>
+                            </li>
+                            <li>
+                                <p>% New Choices </p>
+                            </li>
+                            <li>
+                                <p>Carryover Choices</p>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <p>% Carryover Choices </p>
+                            </li>
+                            <li>
+                                <p>Total Choices </p>
+                            </li>
+                            <li>
+                                <p>Rationalized Choices </p>
+                            </li>
+                            <li>
+                                <p>Comparison Choices </p>
+                            </li>
+                            <li>
+                                <p>Pareto Choices</p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <p>The number of periods in a scenario that contain updates is limited to 53 weeks.  If users try to add updates on a scenario with a larger window of time, the following message displays and updates are not created.</p>
+        <p>
+            <img src="../../Resources/Images/Target Choice Count/Updates 53 Period Limit.png" class="LargeImages" />
+        </p>
     </body>
 </html>
