--- a/Content/Topics/Site Manager/DC Source Priority.htm
+++ b/Content/Topics/Site Manager/DC Source Priority.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Viewing  source priority for a distribution center (DC)</h1>
-        <p>The <span class="Emphasis">DC Source Priority</span> blade displays the site specific sourcing priority for distribution centers. This is a read-only view that is populated by the Supply Chain solution. All active DC sites that are not included in the site’s priority display struck-through.</p>
+        <p>The <span class="Emphasis">DC Source Priority</span> blade displays the site specific sourcing priority for distribution centers. This is a read-only view that is populated by the Supply Chain module. All active DC sites that are not included in the site’s priority display struck-through.</p>
         <p class="BasicNote"> A system policy determines the supply chain that  populates this view.  </p>
         <p>
             <img src="../../Resources/Images/Site Manager/DC Source Priority.png" class="LargeImages" />
