--- a/Content/Topics/Target Choice Count/Target Choice Count Overview.htm
+++ b/Content/Topics/Target Choice Count/Target Choice Count Overview.htm
@@ -6,7 +6,7 @@
     <body>
         <h1>Target Choice Count Overview</h1>
         <p><span class="Emphasis">Target Choice Count</span> is a standalone version of the Target Creation functionality found within Assortment Planning (AP). The main differences between <span class="Emphasis">Target Choice Count</span> and AP is that for <span class="Emphasis">Target Choice Count</span>, the settings come from system policies and the Variant entity is being used. For AP, the settings come from the AP plan and it is the Variant Placeholder entity being used.</p>
-        <p class="BasicNote">While this capability is included within the standard Assortment Planning solution, Target Choice Count can be licensed separately. This gives customers the ability to take advantage of intelligent recommendations when creating assortments even if they do not use the Assortment Planning module.</p>
+        <p class="BasicNote">While this capability is included within the standard Assortment Planning module, Target Choice Count can be licensed separately. This gives customers the ability to take advantage of intelligent recommendations when creating assortments even if they do not use the Assortment Planning module.</p>
         <p>The main view is read-only. Changes are made by selecting the <span class="Emphasis">Edit</span> button and using the <span class="Emphasis">Edit Target Scenario</span> screen to make desired changes.</p>
         <p>
             <img src="../../Resources/Images/Target Choice Count/Target Choice Count screen.PNG" class="LargeImages" />
