--- a/Content/Topics/Users/Allow Access to Event Module View Collection Set.htm
+++ b/Content/Topics/Users/Allow Access to Event Module View Collection Set.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Allow Access To Event Workbench Tab</h1>
-        <p>Provides access to the <span class="Emphasis">Event Workbench</span> tab in the Events solution which may or may not be available. Functionality within this screen varies depending on the configuration. Without this access, the <span class="Emphasis">Event Workbench</span> tab does not display.</p>
+        <p>Provides access to the <span class="Emphasis">Event Workbench</span> tab in the Events module which may or may not be available. Functionality within this screen varies depending on the configuration. Without this access, the <span class="Emphasis">Event Workbench</span> tab does not display.</p>
         <p>
             <img src="../../Resources/Images/Users/Allow Access to Event Module View Collection Set.png" class="LargeImages" />
         </p>
