--- a/Content/Topics/Users/Allow Access to Event.htm
+++ b/Content/Topics/Users/Allow Access to Event.htm
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Allow Access To Event</h1>
-        <p>Provides access to the Events solution. The <span class="Emphasis">Events</span> icon does not display without this User Right.</p>
+        <p>Provides access to the Events module. The <span class="Emphasis">Events</span> icon does not display without this User Right.</p>
     </body>
 </html>
