--- a/Content/Topics/Users/Allow Access to Promotion.htm
+++ b/Content/Topics/Users/Allow Access to Promotion.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Allow Access To Promotion</h1>
-        <p>With this User Right, the <span class="Emphasis">Promotion</span> solution displays in the <span class="Emphasis">Influence</span> tab. <span class="Emphasis">Promotion</span> does not display if the User Right is not assigned.</p>
+        <p>With this User Right, the <span class="Emphasis">Promotion</span> module displays in the <span class="Emphasis">Influence</span> tab. <span class="Emphasis">Promotion</span> does not display if the User Right is not assigned.</p>
         <p>
             <img src="../../Resources/Images/Users/Allow Access to Promotion.png" class="LargeImages" />
         </p>
