--- a/Content/Topics/Users/Allow Creation of Promotion from Event.htm
+++ b/Content/Topics/Users/Allow Creation of Promotion from Event.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Allow Creation Of Promotion from Event</h1>
-        <p>Provides access to create a Promotion from an Event Slot regardless of whether users were granted the User Right to create Promotions in the Promotion solution. </p>
+        <p>Provides access to create a Promotion from an Event Slot regardless of whether users were granted the User Right to create Promotions in the Promotion module. </p>
         <p class="BasicNote">This permission can be configured to be enabled or disabled during specific Event Workflow Status’ States  </p>
         <p class="BasicNote">This functionality and its placement on the screen is the same whether accessed from the <span class="Emphasis">List</span> or <span class="Emphasis">Layout</span> views.</p>
         <h2>Events Management with the user right</h2>
