--- a/Content/Topics/Users/Allow Overriding Slot Set Status.htm
+++ b/Content/Topics/Users/Allow Overriding Slot Set Status.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
@@ -9,11 +9,11 @@
         <p class="BasicNote">This User Right should only be granted to trusted Super Users</p>
         <p class="BasicNote">The User Right <span class="Emphasis">Allow Editing of Slot Set Header</span> must also be granted  </p>
         <p class="BasicNote">This functionality and its placement on the screen is the same whether accessed from the List or Layout</p>
-        <h2>Events Management Solution with the user right</h2>
+        <h2>Events Management module with the user right</h2>
         <p>
             <img src="../../Resources/Images/Users/Allow Overriding Slot Set Status.png" class="LargeImages" />
         </p>
-        <h2>Events Management Solution without the user right</h2>
+        <h2>Events Management module without the user right</h2>
         <p>
             <img src="../../Resources/Images/Users/Allow Overriding Slot Set Status_1.png" class="LargeImages" />
         </p>
