--- a/Content/Topics/Workflow Manager/Creating a Workflow.htm
+++ b/Content/Topics/Workflow Manager/Creating a Workflow.htm
@@ -41,7 +41,7 @@
                             <td class="TableStyle-standard-BodyE-Column1-Body1"><span class="Emphasis">Solution</span>
                             </td>
                             <td class="TableStyle-standard-BodyD-Column2-Body1">
-                                <p>The ToolsGroup JustEnough solution the workflow will govern.</p>
+                                <p>The ToolsGroup JustEnough module the workflow will govern.</p>
                             </td>
                         </tr>
                         <tr class="TableStyle-standard-Body-Body1">
@@ -53,8 +53,8 @@
                             <td class="TableStyle-standard-BodyB-Column1-Body1"><span class="Emphasis">Controlled User Rights</span>
                             </td>
                             <td class="TableStyle-standard-BodyA-Column2-Body1">
-                                <p>The set of solution specific user rights to be controlled by this workflow. The selected rights appear in the status permission blacklist of each status in the workflow. </p>
-                                <p>All user rights related to the selected solution are selected by default. Customize this set by moving rights from the Workflow Controlled list to the Available list in the Workflow User Rights window.</p>
+                                <p>The set of module specific user rights to be controlled by this workflow. The selected rights appear in the status permission blacklist of each status in the workflow. </p>
+                                <p>All user rights related to the selected module are selected by default. Customize this set by moving rights from the Workflow Controlled list to the Available list in the Workflow User Rights window.</p>
                                 <p>
                                     <img src="../../Resources/Images/Workflow Manager/WF User Rights.png" class="LargeImages" />
                                 </p>
@@ -65,7 +65,7 @@
             </li>
             <li>
                 <p>Click <span class="Emphasis">Save</span>.</p>
-                <p>The new workflow appears in the <span class="Emphasis">Workflows</span> pane. The Design pane shows the default  workflow diagram for the solution selected.
+                <p>The new workflow appears in the <span class="Emphasis">Workflows</span> pane. The Design pane shows the default  workflow diagram for the module selected.
 </p>
             </li>
         </ol>
