--- a/Content/Topics/Adaptive Allocations/Adaptive Allocations Overview.htm
+++ b/Content/Topics/Adaptive Allocations/Adaptive Allocations Overview.htm
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
     <body>
         <h1>Adaptive Allocations Overview</h1>
-        <p>Adaptive Allocations is an extension of the <span class="Emphasis">Allocation</span> solution that automates the creation and allocation of localized assortments. Adaptive Allocations determines an optimal mix of products utilizing the ToolsGroup JustEnough Draft Engine and data analytics for locations and products to fulfill a need that can be set through financial planning, location planning and other cover methods. </p>
+        <p>Adaptive Allocations is an extension of the <span class="Emphasis">Allocation</span> module that automates the creation and allocation of localized assortments. Adaptive Allocations determines an optimal mix of products utilizing the ToolsGroup JustEnough Draft Engine and data analytics for locations and products to fulfill a need that can be set through financial planning, location planning and other cover methods. </p>
         <p>Adaptive Allocations can bridge the gap in Inventory Management between a full strategic approach to allocating products to locations and the dispersal of miscellaneous (e.g. broken size run, leftover product, etc.) products through allocations groups.</p>
         <p>While Adaptive Allocations shares many concepts with Assortment Planning, it does not replace Assortment Planning. The additional complexity and detail required to properly execute Assortment Planning provides a higher degree of precision in the final output. </p>
         <p>To create allocation orders which can be executed within Order Manager, the Adaptive Allocations process requires users to create a demand plan from an array of available sources, which drives the choice count process as well as the overall output volumes of the scenario plan. </p>
