--- a/Content/Topics/Assortment Planning/AP Creating Target Scenarios.htm
+++ b/Content/Topics/Assortment Planning/AP Creating Target Scenarios.htm
@@ -14,26 +14,30 @@
                 </p>
             </li>
             <li>
-                <p>Complete the fields  as required.</p>
-                <p>For information on the fields, refer to <MadCap:xref href="Target Scenario Field Descriptions.htm">Target Data Selection pane</MadCap:xref>.</p>
+                <p>Complete the fields in the left pane as required.</p>
+                <p>For information on the fields, refer to <MadCap:xref href="AP New Target Scenarios.htm">Target Scenario field descriptions</MadCap:xref>.</p>
             </li>
             <li>
                 <p>Click <span class="Emphasis">Save</span>.</p>
-                <p>The <span class="Emphasis">Target Creation</span> screen displays.</p>
+                <p>The <span class="Emphasis">Edit Target Scenario</span> screen displays.</p>
+                <p>
+                    <img src="../../Resources/Images/Target Choice Count/Creating and Managing Target Scenarios.PNG" class="LargeImages" />
+                </p>
             </li>
             <li>
-                <p>If desired, click <span class="Emphasis">New</span> in the <span class="Emphasis">Target Segment Definitions</span> section to create a new Target Segment.</p>
-                <p>For more information on the fields, refer to <MadCap:xref href="Target Segment Field Descriptions.htm">Target Segment Definitions </MadCap:xref>.</p>
+                <p>If desired, click <span class="Emphasis">New</span> in the <span class="Emphasis">Segment Definitions</span> section to create a new Target Segment and complete the fields as required.</p>
+                <p>For information on the fields, refer to <MadCap:xref href="AP Configuring Target Segments.htm">Configuring target segments</MadCap:xref>.</p>
             </li>
-        </ol>
-        <h2>Creating target segments</h2>
-        <ol>
-            <li>Display the <span class="Emphasis">Target Creation</span> screen by creating a new Target or selecting the <span class="Emphasis">Copy</span> or <span class="Emphasis">Edit</span> buttons on the toolbar.</li>
             <li>
-                <p>Complete the fields as required.</p>
-                <p>For more information on the fields, refer to <MadCap:xref href="Target Segment Field Descriptions.htm">Target Segment Definitions </MadCap:xref>.</p>
+                <p>Click <span class="Emphasis">Save</span>.</p>
             </li>
-            <li>Click <span class="Emphasis">Save</span>.</li>
+            <li>
+                <p>Configure floor set updates as required.</p>
+                <p>For information on the fields, refer to <MadCap:xref href="Target Floor Set Updates AP.htm">Creating floor set updates for varying time frames</MadCap:xref>.</p>
+            </li>
+            <li>
+                <p>Click <span class="Emphasis">Execute</span>.</p>
+            </li>
         </ol>
     </body>
 </html>
