--- a/Content/Topics/Price Planning/Price Planning related system policies.htm
+++ b/Content/Topics/Price Planning/Price Planning related system policies.htm
@@ -203,7 +203,7 @@
                 <tr class="TableStyle-standard-Body-Body1" MadCap:conditions="">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Product Pricing Level</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                      Determines the level at which the system will allow generation of pricing (execution of calculations and validations) within the solution.  
+                      Determines the level at which the system will allow generation of pricing (execution of calculations and validations) within the module.  
                         <p>Setting the value to Variant\Site and Item\Site Pricing allows users to manipulate the generation of pricing at a high level (Variant\Site) and have greater control and degree of manipulation of pricing at a lower level (Item\Site). </p><p>All Price Actions within a Pricing Plan will be limited to either Variant\Site or Item\Site pricing.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1" MadCap:conditions="">
