--- a/Content/Topics/Profiles/Set Apply and Ordering Rules.htm
+++ b/Content/Topics/Profiles/Set Apply and Ordering Rules.htm
@@ -30,7 +30,7 @@
         <ul>
             <li><span class="Emphasis">Model Name</span> – The name created and assigned to the profile set.</li>
             <li><span class="Emphasis">Order</span> – The specified execution order in which the rules are applied. </li>
-            <li><span class="Emphasis">Apply Type</span> – The manner in which the model is applied to inventories. <ul><li><span class="Emphasis">Do Not Apply</span> – Will not apply the profile set to inventories. </li><li><span class="Emphasis">Automatic</span> – Will automatically apply the profile changes to inventories. </li><li><span class="Emphasis">Manual</span> – Will manually apply profile changes to inventories when users request a manual push. </li></ul></li>
+            <li><span class="Emphasis">Apply Type</span> – The manner in which the model is applied to inventories. <ul><li><span class="Emphasis">Do Not Apply</span> – Will not apply the profile set to inventories. </li><li><span class="Emphasis">Automatic</span> – automatically applies profile changes to inventories. </li><li><span class="Emphasis">Manual</span> – manually applies profile changes to inventories when users request a manual push. </li></ul></li>
             <li><span class="Emphasis">Apply From, Apply To</span> – A start and end date to the application rule. </li>
         </ul>
     </body>
