--- a/Content/Topics/Promotion Management/Promotion Help.htm
+++ b/Content/Topics/Promotion Management/Promotion Help.htm
@@ -1,14 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd"
-      xml:lang="en-us"
-      MadCap:lastBlockDepth="2"
-      MadCap:lastHeight="160"
-      MadCap:lastWidth="1168">
-   <head>
-      <title/>
-   </head>
-   <body>
-      <h1>Promotion help</h1>
-      <p>For more information on the Promotions Management solution  open a ticket via the eSupport portal</p>
-   </body>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
+    <head><title></title>
+    </head>
+    <body>
+        <h1>Promotion help</h1>
+        <p>For more information on the Promotions Management module  open a ticket via the eSupport portal</p>
+    </body>
 </html>
